2001-07-19  Darin Adler  <darin@bentspoon.com>

	* configure.in: Add HTML_DIR definition.
	* xsltproc/.cvsignore: Ignore some generated files.

2001-07-18  Peter Williams  <peterw@ximian.com>

	* xsltproc/Makefile.am (INCLUDES): Fix compiling when
	srcdir != builddir.

2001-07-17  Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/.cvsignore libexslt/Makefile.am libexslt/utils.[ch]
	  libexslt/common.c libexslt/functions.c libexslt/math.c
	  libexslt/sets.c: removed utils.[ch] as their content is
	  integrated in libxml
	* libexslt/sets.c: uses the new libxml functions
	* libxslt/extra.[ch]: removed exsl:document
	* AUTHORS: added /me

2001-07-16  Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/.cvsignore: some more generated files to ignore
	* libexslt/Makefile.am: utils.h not installed anymore
	* libexslt/common.c libexslt/exslt.[ch] libexslt/functions.c
	  libexslt/math.c libexslt/sets.c:
	  changed function prefix from exsl* to exslt*
	  {common.c,exslt.c} moved exsltLib{rary,exslt,xslt,xml}Version
	  from common.c to exslt.c
	  {common.c} removed exslNodeSetFunction, uses xsltFunctionNodeSet
	  instead
	* libxslt/extra.c: fixed xsltFunctionNodeSet to accept
	  XPATH_NODESET arguments in addition to XPATH_XSLT_TREE
	* xsltproc/xsltproc.c: updated to use the new function prefix

2001-07-15  Darin Adler  <darin@bentspoon.com>

	* libxslt/.cvsignore:
	* tests/XSLTMark/.cvsignore:
	* tests/extensions/.cvsignore:
	* tests/xmlspec/.cvsignore:
	Some more generated files to ignore.

Mon Jul 16 14:26:48 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Makefile.am configure.in libexslt/Makefile.am:
	  Integration of libexslt in the build system
	* libxslt/Makefile.am libxslt/xsltproc.c libxslt/xsltutils.c
	  xsltproc/Makefile.am xsltproc/xsltproc.c:
	  Moved xsltproc to a separate directory, linked it to libexslt,
	  and added exslt version reports to -V
	* tests/*/Makefile.am: updated the path to xsltproc
	* libexslt/common.c libexslt/exslt.h libexslt/exsltconfig.h.in