@@ -1,3 +1,10 @@
+Mon Jul 23 20:12:38 CEST 2001 Daniel Veillard <daniel@veillard.com>
+
+	* libexslt/math.c: small cleanup
+	* libxslt/functions.c: patch to document('') from Matt Sergeant
+	* libxslt/xsltInternals.h libxslt/xsltutils.[ch]: profiler on Windows
+	  c.f. bug #57464 from Tom Moog
+
 2001-07-19  Darin Adler  <darin@bentspoon.com>
 
 	* configure.in: Add HTML_DIR definition.
